<?xml version="1.0" encoding="utf-8"?>

<!--IMPORTANT! NEED THIS FOR DATA BINDING OBJECT-->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="tipCalculator"
            type="com.example.multiapp.TipCalculatorFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4300BCD4"
        tools:context=".TipCalculatorFragment">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/price_prompt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/price_label"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/price_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal"
            android:paddingLeft="15dp"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_prompt_title" />

        <CheckBox
            android:id="@+id/fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginEnd="210dp"
            android:text="@string/fifteen_percent_string"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_input" />

        <CheckBox
            android:id="@+id/eighteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/eighteen_percent_string"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintEnd_toStartOf="@+id/twenty_percent"
            app:layout_constraintStart_toEndOf="@+id/fifteen_percent"
            app:layout_constraintTop_toBottomOf="@+id/price_input" />

        <CheckBox
            android:id="@+id/twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/twenty_percenty_string"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintStart_toEndOf="@+id/eighteen_percent"
            app:layout_constraintTop_toBottomOf="@+id/price_input" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#8394CE50"
            android:padding="20dp"
            android:text="@string/calculate"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_input" />

        <TextView
            android:id="@+id/tip_text_view"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="Tip Amount:"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit_button" />

        <TextView
            android:id="@+id/total_text_view"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="Total amount: "
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tip_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>