<?xml version="1.0" encoding="utf-8"?>

<!--IMPORTANT! NEED THIS FOR DATA BINDING OBJECT-->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="randomNumber"
            type="com.example.multiapp.RandomNumberFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5200BCD4"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/top_text"
            style="@style/first_style"
            android:layout_marginTop="120dp"
            android:text="@string/random_number_generator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/number_input_1"
            style="@style/first_style"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="15dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Enter the lower number"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:textAlignment="viewStart"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_text" />

        <EditText
            android:id="@+id/number_input_2"
            style="@style/first_style"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Enter the higher number"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:textAlignment="viewStart"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_input_1" />

        <CheckBox
            android:id="@+id/without_replacement_check_box"
            style="@style/first_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/without_replacement"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_input_2" />

        <TextView
            android:id="@+id/generated_number_view"
            style="@style/first_style"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_input_2" />

        <Button
            android:id="@+id/get_number_button"
            style="@style/first_style"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:background="#E91E63"
            android:fontFamily="sans-serif-light"
            android:text="@string/submit_button_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generated_number_view" />

        <Button
            android:id="@+id/to_dice_fragment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E91E63"
            android:text="@string/app_name_pair_o_dice"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/top_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
